--- a/LTC CMS vs CTP.ipynb
+++ b/LTC CMS vs CTP.ipynb
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1309,13 +1309,181 @@
       "IA: 247 deaths, 1718 cases\n",
       "KS: 619 deaths, 3939 cases\n",
       "MN: 2341 deaths, 12338 cases\n",
-      "NJ: 1330 deaths, 6032 cases\n"
+      "NJ: 1330 deaths, 6032 cases\n",
+      "CT: 0 deaths, 0 cases\n"
      ]
     }
    ],
    "source": [
     "# unmapped cases and deaths\n",
     "for state in ['IA', 'KS', 'MN', 'NJ']:\n",
+    "    print('%s: %d deaths, %d cases' % (\n",
+    "        state,\n",
+    "        cms_ctp_merged_outer.loc[\n",
+    "            (cms_ctp_merged_outer.cms_provider_state == state) &\n",
+    "            (cms_ctp_merged_outer.cms_week == LATEST_DATE) &\n",
+    "            (pd.isnull(cms_ctp_merged_outer.ctp_cms_week))].cms_residents_total_covid_19_deaths.sum(),\n",
+    "        cms_ctp_merged_outer.loc[\n",
+    "            (cms_ctp_merged_outer.cms_provider_state == state) &\n",
+    "            (cms_ctp_merged_outer.cms_week == LATEST_DATE) &\n",
+    "            (pd.isnull(cms_ctp_merged_outer.ctp_cms_week))].cms_resident_total_cases.sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 58)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cms_ctp_merged_outer.loc[\n",
+    "            (cms_ctp_merged_outer.cms_provider_state == 'CT') &\n",
+    "            (pd.isnull(cms_ctp_merged_outer.ctp_cms_week)) &\n",
+    "            (cms_ctp_merged_outer.cms_week == '2021-01-31')].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2021-01-31    15692\n",
+       "2021-01-24    15687\n",
+       "2020-12-20    15684\n",
+       "2020-12-27    15676\n",
+       "2021-01-03    15674\n",
+       "2021-01-10    15670\n",
+       "2020-12-13    15668\n",
+       "2021-02-14    15652\n",
+       "2021-02-21    15646\n",
+       "2021-03-07    15627\n",
+       "2020-11-29    15626\n",
+       "2021-02-28    15622\n",
+       "2021-02-07    15620\n",
+       "2020-11-22    15606\n",
+       "2020-11-15    15593\n",
+       "2020-12-06    15591\n",
+       "2021-01-17    15588\n",
+       "2020-11-08    15585\n",
+       "2020-10-25    15575\n",
+       "2020-11-01    15573\n",
+       "2020-10-18    15563\n",
+       "2020-10-11    15554\n",
+       "2020-09-27    15550\n",
+       "2020-10-04    15543\n",
+       "2020-09-20    15525\n",
+       "2020-09-06    15516\n",
+       "2020-09-13    15504\n",
+       "2020-08-30    15464\n",
+       "2020-08-23    15444\n",
+       "2020-08-02    15427\n",
+       "2020-08-09    15426\n",
+       "2020-08-16    15426\n",
+       "2020-07-26    15423\n",
+       "2020-07-12    15420\n",
+       "2020-07-19    15420\n",
+       "2020-06-28    15417\n",
+       "2020-07-05    15412\n",
+       "2020-06-21    15394\n",
+       "2020-06-14    15386\n",
+       "2020-06-07    15385\n",
+       "2020-05-31    15382\n",
+       "2021-03-14    15323\n",
+       "2021-03-28    15322\n",
+       "2021-03-21    15321\n",
+       "2021-04-04    15319\n",
+       "2021-04-11    15318\n",
+       "2021-04-18    15317\n",
+       "2021-04-25    15317\n",
+       "2021-05-09    15312\n",
+       "2021-05-02    15312\n",
+       "Name: cms_week, dtype: int64"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cms_ctp_merged_outer.cms_week.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AR: 58 deaths, 324 cases\n",
+      "CA: 237 deaths, 1709 cases\n",
+      "CO: 1755 deaths, 8841 cases\n",
+      "CT: 0 deaths, 0 cases\n",
+      "DC: 95 deaths, 707 cases\n",
+      "DE: 70 deaths, 540 cases\n",
+      "FL: 4752 deaths, 37696 cases\n",
+      "GA: 106 deaths, 493 cases\n",
+      "HI: 17 deaths, 242 cases\n",
+      "IA: 247 deaths, 1718 cases\n",
+      "ID: 27 deaths, 233 cases\n",
+      "IL: 1746 deaths, 10552 cases\n",
+      "IN: 99 deaths, 668 cases\n",
+      "KS: 619 deaths, 3939 cases\n",
+      "KY: 77 deaths, 693 cases\n",
+      "LA: 74 deaths, 481 cases\n",
+      "MA: 4479 deaths, 20899 cases\n",
+      "MD: 2103 deaths, 12071 cases\n",
+      "ME: 85 deaths, 908 cases\n",
+      "MI: 3701 deaths, 18157 cases\n",
+      "MN: 2341 deaths, 12338 cases\n",
+      "MO: 2980 deaths, 21683 cases\n",
+      "MS: 1158 deaths, 8114 cases\n",
+      "NC: 1148 deaths, 7971 cases\n",
+      "ND: 7 deaths, 45 cases\n",
+      "NJ: 1330 deaths, 6032 cases\n",
+      "NM: 63 deaths, 109 cases\n",
+      "NV: 41 deaths, 327 cases\n",
+      "NY: 21 deaths, 429 cases\n",
+      "OH: 1579 deaths, 10015 cases\n",
+      "OK: 132 deaths, 649 cases\n",
+      "OR: 97 deaths, 407 cases\n",
+      "PA: 9899 deaths, 53063 cases\n",
+      "RI: 37 deaths, 161 cases\n",
+      "SC: 78 deaths, 469 cases\n",
+      "TN: 647 deaths, 4200 cases\n",
+      "TX: 183 deaths, 1410 cases\n",
+      "UT: 174 deaths, 1469 cases\n",
+      "VA: 2618 deaths, 17763 cases\n",
+      "VT: 82 deaths, 611 cases\n",
+      "WI: 319 deaths, 2002 cases\n",
+      "WV: 1 deaths, 2 cases\n",
+      "WY: 23 deaths, 87 cases\n"
+     ]
+    }
+   ],
+   "source": [
+    "# do this for all states?\n",
+    "\n",
+    "all_states = sorted(set(cms_ctp_merged_outer.loc[~pd.isnull(cms_ctp_merged_outer.ctp_ctp_id)].ctp_state))\n",
+    "\n",
+    "# unmapped cases and deaths\n",
+    "for state in all_states:\n",
     "    print('%s: %d deaths, %d cases' % (\n",
     "        state,\n",
     "        cms_ctp_merged_outer.loc[\n",
@@ -1443,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1620,7 @@
        "43"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
